// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-row-hover-color: #212225 !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  position: relative;
  width: 100%;
  display: table;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  text-align: left;
  color: #FBFCFF;
  white-space: nowrap;
  border-collapse: collapse;
}"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-row-hover-color: #EEEFF2 !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  position: relative;
  width: 100%;
  display: table;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  text-align: left;
  color: #010205;
  white-space: nowrap;
  border-collapse: collapse;
}"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-table a {
  color: inherit !important;
  text-decoration: underline !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
p-table b, p-table strong {
  font-weight: 700 !important;
}
p-table em, p-table i {
  font-style: normal !important;
}
p-table img {
  vertical-align: middle !important;
}
p-table a::-moz-focus-inner {
  border: 0 !important;
}
p-table a:focus {
  outline-color: currentColor !important;
}
p-table a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}
@media(hover:hover) {
  p-table[data-theme="dark"] a:hover {
    color: rgba(126, 127, 130, 0.20) !important;
  }
  p-table a {
    transition: color var(--p-transition-duration, .24s) ease !important;
  }
  p-table a:hover {
    color: rgba(148, 149, 152, 0.20) !important;
  }
}
"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-table a {
  color: inherit !important;
  text-decoration: underline !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
prefixed-p-table b, prefixed-p-table strong {
  font-weight: 700 !important;
}
prefixed-p-table em, prefixed-p-table i {
  font-style: normal !important;
}
prefixed-p-table img {
  vertical-align: middle !important;
}
prefixed-p-table a::-moz-focus-inner {
  border: 0 !important;
}
prefixed-p-table a:focus {
  outline-color: currentColor !important;
}
prefixed-p-table a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}
@media(hover:hover) {
  prefixed-p-table[data-theme="dark"] a:hover {
    color: rgba(126, 127, 130, 0.20) !important;
  }
  prefixed-p-table a {
    transition: color var(--p-transition-duration, .24s) ease !important;
  }
  prefixed-p-table a:hover {
    color: rgba(148, 149, 152, 0.20) !important;
  }
}
"
`;
